--- a/assets/css/components/skills.css
+++ b/assets/css/components/skills.css
@@ -16,6 +16,7 @@
 .problems-box {
   padding: 0 2rem 0 2rem;
   height: auto;
+  margin-bottom: 1rem;
 }
 
 .problems-title {
@@ -24,12 +25,14 @@
   color: var(--color-text-white);
   padding: 0.2rem 1rem 0.2rem 1rem;
   text-align: center;
+  border-radius: 0.3rem 0.3rem 0 0;
 }
 
 .problems-content {
   border: 3px var(--color-text-black) solid;
   min-height: 8rem;
   padding: 0.5rem;
+  border-radius: 0 0 0.3rem 0.3rem;
 }
 
 
@@ -40,6 +43,7 @@
 .skills-box {
   padding: 0 2rem 0 2rem;
   height: auto;
+  margin-bottom: 1rem;
 }
 
 .skills-title {
@@ -48,12 +52,14 @@
   color: var(--color-text-white);
   padding: 0.2rem 1rem 0.2rem 1rem;
   text-align: center;
+  border-radius: 0.3rem 0.3rem 0 0;
 }
 
 .skills-content {
   border: 3px var(--color-text-black) solid;
   min-height: 8rem;
   padding: 0.5rem;
+  border-radius: 0 0 0.3rem 0.3rem;
 }
 
 .button-center {
